--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,13 @@ requests==2.32.5
 
 # Database
 psycopg2-binary==2.9.9
+mysql-connector-python==9.5.0
+
+# Music library scanning and analysis
+mutagen==1.47.0
+librosa==0.11.0
+soundfile==0.13.1
+pydub==0.25.1
 
 # Configuration and utilities
 six==1.17.0
