Add Timemachine plugin for retroactive audio recording
- Created plugins/timemachine.py for JACK Timemachine control
- Voice commands: start/stop buffer, save recordings, check status
- Maintains continuous rolling buffer (default 30 seconds, configurable)
- Retroactive recording - capture what was just played/recorded
- Signal-based control (SIGUSR1 to trigger save)
- Subprocess management with PID tracking
- Auto-connect to JACK capture ports (configurable)
- Timestamped filenames (YYYYMMDD-HHMMSS)
- Configurable buffer length, output directory, channels, format
- Automatic buffer start on first save attempt
- Graceful shutdown with cleanup
- Perfect for capturing spontaneous musical ideas
- Added configuration to voice_assistant_config.json.example
- Created comprehensive docs/TIMEMACHINE.md documentation
- Usage examples, JACK routing guide, troubleshooting
- Use case: 'save that' captures last N seconds after you realize it was good

--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -52,6 +52,16 @@
     },
     "basic_commands": {
       "enabled": true
+    },
+    "timemachine": {
+      "enabled": true,
+      "buffer_seconds": 30,
+      "output_dir": "~/recordings",
+      "file_prefix": "recording-",
+      "channels": 2,
+      "format": "wav",
+      "jack_name": "TimeMachine",
+      "auto_connect": true
     }
   }
 }
