Add Gradio web dashboard for voice assistant
Features:
- Real-time monitoring on port 7865
- Overview tab: system status, now playing, buffer status, music stats
- Logs tab: live tail of voice/llm/tts logs with auto-refresh
- Recordings tab: browse recent ring buffer recordings
- Configuration tab: view current config
- Modern dark Glass theme with blue/purple accents
- Fully optional - doesn't interfere with headless operation
- Network accessible from any device
- Auto-refreshing panels for real-time updates

Usage:
- python gradio_dashboard.py (standalone)
- ./start_with_dashboard.sh (with voice assistant)

Access at http://localhost:7865 or http://YOUR_IP:7865

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,6 @@ pydub==0.25.1
 
 # Configuration and utilities
 six==1.17.0
+
+# Optional: Web dashboard (not required for headless operation)
+gradio==4.44.0
