--- a/requirements.txt
+++ b/requirements.txt
@@ -28,4 +28,5 @@ pydub==0.25.1
 six==1.17.0
 
 # Optional: Web dashboard (not required for headless operation)
-gradio==4.44.0
+gradio==4.19.2
+huggingface_hub<1.0
