Add log level configuration to suppress partial recognition logging
Added 'logging.log_level' setting to configuration:
- INFO (default): Suppresses 'Partial:' speech recognition messages
- DEBUG: Shows all partial results for debugging

This prevents log files from filling up with partial recognition
attempts that were previously logged on every audio frame.

Also fixed 'now playing' detection:
- Added get_now_playing() to ogg_jack_player.py
- Dashboard now queries player state directly
- More reliable than parsing huge log files

Updated config example and documentation.

--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -26,6 +26,9 @@
     "interval_seconds": 0.5,
     "delete_query_after_read": true
   },
+  "logging": {
+    "log_level": "INFO"
+  },
   "voice": {
     "recognition": {
       "model_path": "model",
