Replace Gradio dashboard and systemd service with PySide6 system tray application
Major changes:
- Remove Gradio dashboard (gradio_dashboard.py, start_with_dashboard.sh)
- Remove systemd service (voice-assistant.service)
- Add PySide6 system tray application (voice_assistant_tray.py)
- Add plugin GUI support to plugin_base.py
- Add full GUI controls to music_player plugin
- Fix database query commands (stop signal file cleanup)
- Fix Linux compatibility in start_voice_assistant.sh (stat command)
- Update documentation (TRAY_APP.md replaces DASHBOARD.md and SYSTEMD_SERVICE.md)
- Add launch_tray_app.sh convenience script
- Update requirements.txt with PySide6

Features:
- System tray icon with menu controls
- Start/Stop voice assistant from tray
- Real-time now playing display
- Plugin GUI forms accessible from tray menu
- Music player GUI with playback controls, volume slider, and search
- Log viewer
- About dialog

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,5 @@ pydub==0.25.1
 # Configuration and utilities
 six==1.17.0
 
-# Optional: Web dashboard (not required for headless operation)
-gradio==4.19.2
-huggingface_hub<1.0
+# GUI (System Tray Application)
+PySide6==6.6.1
