Add X-GNOME-Autostart-enabled and Utility category to desktop file

--- a/jackdaw.desktop
+++ b/jackdaw.desktop
@@ -6,6 +6,7 @@ Comment=Voice-controlled assistant with JACK Audio integration
 Exec=/home/sysadmin/Programs/jack-voice-assistant/launch_tray_app.sh
 Icon=/home/sysadmin/Programs/jack-voice-assistant/jackdaw-icon.png
 Terminal=false
-Categories=AudioVideo;Audio;
+Categories=AudioVideo;Audio;Utility;
 Keywords=voice;assistant;jack;audio;music;
 StartupNotify=true
+X-GNOME-Autostart-enabled=true
