Increase default ring buffer to 5 minutes (300 seconds)

--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -58,12 +58,12 @@
     },
     "timemachine": {
       "enabled": true,
-      "buffer_seconds": 30,
+      "buffer_seconds": 300,
       "output_dir": "~/recordings",
       "file_prefix": "recording-",
       "channels": 2,
       "format": "wav",
-      "jack_name": "TimeMachine",
+      "jack_name": "RingBufferRecorder",
       "auto_connect": true
     }
   }
