--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -65,6 +65,15 @@
       "format": "wav",
       "jack_name": "RingBufferRecorder",
       "auto_connect": true
+    },
+    "icecast_streamer": {
+      "enabled": false,
+      "host": "localhost",
+      "port": 8000,
+      "password": "hackme",
+      "mount": "/jackdaw.ogg",
+      "bitrate": 128,
+      "format": "ogg"
     }
   }
 }
