Rename all JACK clients with jd_ prefix and unify connection saving
JACK client name changes:
- VoiceCommandClient -> jd_voice (voice recognition input)
- TTSClient -> jd_tts (text-to-speech output)
- OggPlayer -> jd_music (music playback)
- RingBufferRecorder -> jd_buffer (timemachine recording)
- IcecastStreamer -> jd_stream (Icecast streaming)

remember_jack_routing.py improvements:
- Auto-discovers ALL Jackdaw clients (jd_* prefix)
- Saves all connections in unified format
- Backwards compatible with legacy connection format
- Clearer output showing what was saved

All plugins updated to:
- Use new jd_ prefixed client names
- Load from unified jackdaw_connections format
- Fall back to legacy format for compatibility

--- a/jackdaw.desktop
+++ b/jackdaw.desktop
@@ -9,4 +9,4 @@ Terminal=false
 Categories=AudioVideo;Audio;Utility;
 Keywords=voice;assistant;jack;audio;music;
 StartupNotify=true
-X-GNOME-Autostart-enabled=true
+#X-GNOME-Autostart-enabled=true
