--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -56,14 +56,13 @@
     "basic_commands": {
       "enabled": true
     },
-    "timemachine": {
+    "buffer": {
       "enabled": true,
       "buffer_seconds": 300,
       "output_dir": "~/recordings",
       "file_prefix": "recording-",
       "channels": 2,
       "format": "wav",
-      "jack_name": "RingBufferRecorder",
       "auto_connect": true
     },
     "icecast_streamer": {
