Add proper icon system with multiple sizes
- Generated icons in all standard sizes (16x16 to 512x512) from SVG
- Added scalable SVG icon for infinite resolution
- Updated desktop file to use standard 'jackdaw' icon name
- Modified tray app to use actual jackdaw icon instead of programmatic microphone
- Icons follow freedesktop.org hicolor theme specification
- All icons have transparent backgrounds

--- a/jackdaw.desktop
+++ b/jackdaw.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Jackdaw Voice Assistant
 Comment=Voice-controlled assistant with JACK Audio integration
 Exec=/home/sysadmin/Programs/jack-voice-assistant/launch_tray_app.sh
-Icon=/home/sysadmin/Programs/jack-voice-assistant/jackdaw-icon.png
+Icon=jackdaw
 Terminal=false
 Categories=AudioVideo;Audio;Utility;
 Keywords=voice;assistant;jack;audio;music;
