feat: Add authenticated JackTrip hub with HTTPS and complete web patchbay
- Implement user authentication (bcrypt + SQLite)
- Add HTTPS/TLS with auto-generated self-signed certificates
- Fix JACK port direction semantics (capture=output, playback=input)
- Eliminate duplicate connection lines in hub server
- Complete web patchbay with zoom, pan, minimap, client splitting
- Add comprehensive documentation for LAN deployment
- Create security documentation for authentication and TLS
- Update README with development status notice
- Add jackdaw-train/ to .gitignore

Note: JackTrip features are in main branch only, not yet in releases

--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -74,6 +74,18 @@
       "bitrate": 128,
       "format": "ogg",
       "comment": "Supported formats: ogg (Vorbis), opus, flac, mp3. Xiph.org formats recommended: ogg, opus, flac"
+    },
+    "jacktrip_client": {
+      "enabled": true,
+      "send_channels": 2,
+      "receive_channels": 2,
+      "jack_client_name": "jacktrip_client",
+      "auto_connect": true
     }
+  },
+  "jacktrip_hub": {
+    "hub_url": "http://localhost:8000",
+    "username": "demo",
+    "password": "demo"
   }
 }
