--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,8 @@ pydub==0.25.1
 # Configuration and utilities
 six==1.17.0
 
+# Authentication (for hub server)
+bcrypt==4.1.2
+
 # GUI (System Tray Application)
 PySide6==6.6.1
