fix: Update hub config to use HTTPS and remove duplicate return statement
- Fixed duplicate return statement in _load_hub_config causing HTTP fallback
- Updated voice_assistant_config.json to use https://localhost:8000
- Updated voice_assistant_config.json.example to use https and verify_ssl setting
- Added verify_ssl: false for self-signed certificate support in voice commands

--- a/voice_assistant_config.json.example
+++ b/voice_assistant_config.json.example
@@ -84,8 +84,9 @@
     }
   },
   "jacktrip_hub": {
-    "hub_url": "http://localhost:8000",
+    "hub_url": "https://localhost:8000",
     "username": "demo",
-    "password": "demo"
+    "password": "demo",
+    "verify_ssl": false
   }
 }
